# monda

./: .gitignore  README.md  install-hooks.sh  install.sh  monda.service  pyproject.toml
docs/: config.md  hik.md  jobs.md  led.md  workers.md
hooks/: pre-commit.sh
logrotate/: monda
monda/: config_schema.py  configure.py  main.py  monda.py
monda/classes/base/: Job.py  Worker.py
monda/classes/base/Hik/: HikEvent.py
monda/classes/base/hik/: HikEvent.py
monda/classes/jobs/: J_HikAlertSnap.py  __init__.py
monda/classes/jobs/hik/: J_HikAlertSnap.py  J_HikSnap.py  J_HikSnapArch.py
monda/classes/workers/: W_BackupWatcherBorg.py  W_BackupWatcherRaw.py  W_ConfigWatch.py  W_Cron.py  W_DockerWatcher.py  W_HikConsumer.py  W_HikProducer.py  W_MDadm.py  W_MondaStatus.py  W_SSHLoginWatcher.py  W_SystemdWatcher.py  __init__.py  worker_utils.py
monda/classes/workers/hik/: W_HikConsumer.py  W_HikProducer.py
monda/classes/workers/telegram/: W_TelegramBot.py
monda/utils/: fmt.py  globs.py  led_alert.py  logger.py  logs_cmd.py  misc.py  redis_client.py  status.py
