[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "MonDa"
version = "1.1.0"
description = "Monitoring Daemon"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "art",
    "croniter",
    "redis",
    "pyyaml",
    "tzdata; sys_platform == 'win32'",
]

[project.scripts]
monda = "monda.monda:main"

[tool.setuptools.packages.find]
include = ["monda*"]
