[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "MonDa"
version = "1.2.36+m"
description = "Monitoring Daemon"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "art",
    "croniter",
    "zstandard",
    "redis",
    "tzdata; sys_platform == 'win32'",
]

[project.scripts]
monda = "monda.monda:main"

[tool.setuptools.packages.find]
include = ["monda*"]
